# rust_training

./: .env  Cargo.toml  README.md
migrations/2022-03-05-010616_user/: down.sql  up.sql
migrations/2022-03-31-172647_user_token/: down.sql  up.sql
migrations/2022-04-02-144825_reset/: up.sql
src/: auth.rs  db.rs  engine.rs  error.rs  handler.rs  lib.rs  main.rs  schema.rs  utils.rs
src/entity/: general.rs  mod.rs  user.rs
