[package]
authors = ["Moaz bin Mohamed Mokhtar <moaz.mokhtar@gmail.com>"]
edition = "2021"
name = "rust_training"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-service = "2.0.2"
actix-web = "4.0.1"
bcrypt = "0.12.0"
chrono = "0.4.19"
cookie = "0.16.0"
custom_error = "1.9.2"
derive_more = "0.99.17"
diesel = {version = "1.4.8", features = ["uuidv07", 
"postgres", "r2d2"]}
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
jsonwebtoken = "8.0.1"
log = "0.4.14"
r2d2 = "0.8.9"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
uuid = {version = "0.8.2", features = ["serde", "v4"]}
